sampdotnet/Core/Natives.cs

		
		// a_vehicles.inc
		#region a_vehicles.inc
		
		// Vehicles
		[DllImport("__Internal", EntryPoint="_samp_CreateVehicle")]
		public static extern int CreateVehicle(int vehicletype, float x, float y, float z, float rotation, int color1, int color2, int respawn_delay);
		[DllImport("__Internal", EntryPoint="_samp_DestroyVehicle")]
		public static extern void DestroyVehicle(int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_IsVehicleStreamedIn")]
		public static extern void IsVehicleStreamedIn(int vehicleid, int forplayerid);
		[DllImport("__Internal", EntryPoint="_samp_GetVehiclePos")]
		public static extern void GetVehiclePos(int vehicleid, ref float x, ref float y, ref float z);
		[DllImport("__Internal", EntryPoint="_samp_SetVehiclePos")]
		public static extern void SetVehiclePos(int vehicleid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleZAngle")]
		public static extern void GetVehicleZAngle(int vehicleid, ref float z_angle);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleRotationQuat")]
		public static extern void GetVehicleRotationQuat(int vehicleid, ref float w, ref float x, ref float y, ref float z);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleDistanceFromPoint")]
		public static extern void GetVehicleDistanceFromPoint(int vehicleid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleZAngle")]
		public static extern void SetVehicleZAngle(int vehicleid, float z_angle);
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleParamsForPlayer")]
		public static extern void SetVehicleParamsForPlayer(int vehicleid, int playerid, int objective, int doorslocked);
		[DllImport("__Internal", EntryPoint="_samp_ManualVehicleEngineAndLights")]
		public static extern void ManualVehicleEngineAndLights();
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleParamsEx")]
		public static extern void SetVehicleParamsEx(int vehicleid, int engine, int lights, int alarm, int doors, int bonnet, int boot, int objective);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleParamsEx")]
		public static extern void GetVehicleParamsEx(int vehicleid, ref int engine, ref int lights, ref int alarm, ref int doors, ref int bonnet, ref int boot, ref int objective);
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleToRespawn")]
		public static extern void SetVehicleToRespawn(int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_LinkVehicleToInterior")]
		public static extern void LinkVehicleToInterior(int vehicleid, int interiorid);
		[DllImport("__Internal", EntryPoint="_samp_AddVehicleComponent")]
		public static extern void AddVehicleComponent(int vehicleid, int componentid);
		[DllImport("__Internal", EntryPoint="_samp_RemoveVehicleComponent")]
		public static extern void RemoveVehicleComponent(int vehicleid, int componentid);
		[DllImport("__Internal", EntryPoint="_samp_ChangeVehicleColor")]
		public static extern void ChangeVehicleColor(int vehicleid, int color1, int color2);
		[DllImport("__Internal", EntryPoint="_samp_ChangeVehiclePaintjob")]
		public static extern void ChangeVehiclePaintjob(int vehicleid, int paintjobid);
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleHealth")]
		public static extern void SetVehicleHealth(int vehicleid, float health);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleHealth")]
		public static extern void GetVehicleHealth(int vehicleid, ref float health);
		[DllImport("__Internal", EntryPoint="_samp_AttachTrailerToVehicle")]
		public static extern void AttachTrailerToVehicle(int trailerid, int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_DetachTrailerFromVehicle")]
		public static extern void DetachTrailerFromVehicle(int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_IsTrailerAttachedToVehicle")]
		public static extern int IsTrailerAttachedToVehicle(int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleTrailer")]
		public static extern int GetVehicleTrailer(int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleNumberPlate")]
		public static extern void SetVehicleNumberPlate(int vehicleid, string numberplate);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleModel")]
		public static extern int GetVehicleModel(int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleComponentInSlot")]
		public static extern int GetVehicleComponentInSlot(int vehicleid, int slot);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleComponentType")]
		public static extern int GetVehicleComponentType(int component);
		[DllImport("__Internal", EntryPoint="_samp_RepairVehicle")]
		public static extern void RepairVehicle(int vehicleid);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleVelocity")]
		public static extern void GetVehicleVelocity(int vehicleid, ref float x, ref float y, ref float z);
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleVelocity")]
		public static extern void SetVehicleVelocity(int vehicleid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleAngularVelocity")]
		public static extern void SetVehicleAngularVelocity(int vehicleid, float x, float y, float z);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleDamageStatus")]
		public static extern void GetVehicleDamageStatus(int vehicleid, ref int panels, ref int doors, ref int lights, ref int tires);
		[DllImport("__Internal", EntryPoint="_samp_UpdateVehicleDamageStatus")]
		public static extern void UpdateVehicleDamageStatus(int vehicleid, int panels, int doors, int lights, int tires);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleModelInfo")]
		public static extern void GetVehicleModelInfo(int vehiclemodel, int infotype, ref float x, ref float y, ref float z);
		[DllImport("__Internal", EntryPoint="_samp_SetVehicleVirtualWorld")]
		public static extern void SetVehicleVirtualWorld(int vehicleid, int worldid);
		[DllImport("__Internal", EntryPoint="_samp_GetVehicleVirtualWorld")]
		public static extern int GetVehicleVirtualWorld(int vehicleid);
		
		#endregion
		
		// a_objects.inc
		#region a_objects.inc
